<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:ignore="MissingPrefix"
    tools:context=".CreateTeamActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/inputnameteam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                fontPath="fonts/geomanist-regular.ttf"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:background="@drawable/input"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputfirstnameteam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/inputnameteam"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                fontPath="fonts/geomanist-regular.ttf"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:background="@drawable/input"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputteamname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/inputfirstnameteam"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamname"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                fontPath="fonts/geomanist-regular.ttf"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:background="@drawable/input"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputadressteam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/inputteamname"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                fontPath="fonts/geomanist-regular.ttf"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:background="@drawable/input"/>
        </LinearLayout>

        <Button
            android:id="@+id/nextcreateteambutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/inputadressteam"
            android:text="@string/next_button"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:letterSpacing="0.1"
            android:background="@drawable/rounded_button"
            fontPath="font/geomanist-medium.ttf" />

    </RelativeLayout>

</RelativeLayout>